--- a/gb/19/1/19/n10985904.md
+++ b/gb/19/1/19/n10985904.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/exkayf305/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/exkayf305/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/exkayf305/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/exkayf305/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/exkayf305/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/exkayf305/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/exkayf305/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/exkayf305/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/exkayf305/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/exkayf305/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/exkayf305/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/exkayf305/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/exkayf305/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/exkayf305/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/exkayf305/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/exkayf305/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/exkayf305/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/exkayf305/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/exkayf305/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/exkayf305/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/exkayf305/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/exkayf305/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/exkayf305/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“屏科大酱油之父”谢宝全  获国家产学大师奖</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/01/a98b38328fd1887892b640570e793595-600x400.jpg" />
 <h6></h6>
 <hr>
-<p>【大纪元2019年01月19日讯】（大纪元记者简惠敏台湾屏东报导）屏东科技大学食品科学系教授谢宝全，为协助农民提升农产品附加价值，以其微生物发酵专长，研发出许多商品，其中“薄盐酱油”更是超人气，因而有“<ahref="https://github.com/exkayf305/djy/blob/master/gb/tag/%E5%B1%8F%E7%A7%91%E5%A4%A7.md#1">屏科大</a><ahref="https://github.com/exkayf305/djy/blob/master/gb/tag/%E9%85%B1%E6%B2%B9%E4%B9%8B%E7%88%B6.md#1">酱油之父</a>”美称，荣获教育部第一届国家<ahref="https://github.com/exkayf305/djy/blob/master/gb/tag/%E4%BA%A7%E5%AD%A6%E5%A4%A7%E5%B8%88.md#1">产学大师</a>奖。</p>
-<p>谢宝全研发能量强大，有“<ahref="https://github.com/exkayf305/djy/blob/master/gb/tag/%E5%B1%8F%E7%A7%91%E5%A4%A7.md#1">屏科大</a>研发王”称号，他将屏科大“学府酱油”改造为全台第一瓶无添加化学成分的“薄盐酱油”，以1千万元将薄盐酱油成功技转，促成屏大生物科技公司成立，年销售量达百万瓶，并为学生创造就业机会，目前该公司包括厂长在内有3分之2员工毕业自屏科大。</p>
-<figure id="attachment_10985908" aria-describedby="caption-attachment-10985908" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/19/1/19/n10985904.md#1/%e5%b1%8f%e7%a7%91%e5%a4%a7%e6%a0%a1%e9%95%b7%e6%88%b4%e6%98%8c%e8%b3%a2-%e5%8f%b3%e8%88%87%e5%9c%8b%e5%ae%b6%e7%94%a2%e5%ad%b8%e5%a4%a7%e5%b8%ab%e8%ac%9d%e5%af%b6%e5%85%a8%e5%b7%a6%e5%90%88" rel="attachment wp-att-10985908"><img class="size-medium wp-image-10985908" src="https://i.epochtimes.com/assets/uploads/2019/01/80a076380652ff8d80e5169c79242e96-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-10985908" class="wp-caption-text">屏科大校长戴昌贤 (右)与国家<ahref="https://github.com/exkayf305/djy/blob/master/gb/tag/%E4%BA%A7%E5%AD%A6%E5%A4%A7%E5%B8%88.md#1">产学大师</a>谢宝全(左)合影。（屏东科技大学提供）</figcaption></figure>
+<p>【大纪元2019年01月19日讯】（大纪元记者简惠敏台湾屏东报导）屏东科技大学食品科学系教授谢宝全，为协助农民提升农产品附加价值，以其微生物发酵专长，研发出许多商品，其中“薄盐酱油”更是超人气，因而有“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B1%8F%E7%A7%91%E5%A4%A7.md#1">屏科大</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%85%B1%E6%B2%B9%E4%B9%8B%E7%88%B6.md#1">酱油之父</a>”美称，荣获教育部第一届国家<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%A7%E5%AD%A6%E5%A4%A7%E5%B8%88.md#1">产学大师</a>奖。</p>
+<p>谢宝全研发能量强大，有“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B1%8F%E7%A7%91%E5%A4%A7.md#1">屏科大</a>研发王”称号，他将屏科大“学府酱油”改造为全台第一瓶无添加化学成分的“薄盐酱油”，以1千万元将薄盐酱油成功技转，促成屏大生物科技公司成立，年销售量达百万瓶，并为学生创造就业机会，目前该公司包括厂长在内有3分之2员工毕业自屏科大。</p>
+<figure id="attachment_10985908" style="width: 450px" class="wp-caption aligncenter"><ahref="https://github.com/eizauy3553/djy/blob/master/gb/19/1/19/n10985904.md#1/%e5%b1%8f%e7%a7%91%e5%a4%a7%e6%a0%a1%e9%95%b7%e6%88%b4%e6%98%8c%e8%b3%a2-%e5%8f%b3%e8%88%87%e5%9c%8b%e5%ae%b6%e7%94%a2%e5%ad%b8%e5%a4%a7%e5%b8%ab%e8%ac%9d%e5%af%b6%e5%85%a8%e5%b7%a6%e5%90%88" rel="attachment wp-att-10985908"><img class="size-medium wp-image-10985908" src="https://i.epochtimes.com/assets/uploads/2019/01/80a076380652ff8d80e5169c79242e96-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">屏科大校长戴昌贤 (右)与国家<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BA%A7%E5%AD%A6%E5%A4%A7%E5%B8%88.md#1">产学大师</a>谢宝全(左)合影。（屏东科技大学提供）</figcaption></figure>
 <p>为民众食安把关，他以“天然健康”为食品科学研究主轴，利用微生物发酵的专长，研发木瓜酵素粉、纳豆面膜、薄盐酱油、味噌、梅精、麝香猫咖啡豆、芭乐桑、蔬菜优酪乳、水果珍珠等60多种产品，约有10种已技术移转。</p>
-<figure id="attachment_10985909" aria-describedby="caption-attachment-10985909" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/19/1/19/n10985904.md#1/%e5%9c%8b%e5%ae%b6%e7%94%a2%e5%ad%b8%e5%a4%a7%e5%b8%ab%e8%ac%9d%e5%af%b6%e5%85%a8%e5%b1%95%e7%a4%ba%e5%9c%a8%e5%b1%8f%e7%a7%91%e5%a4%a738%e5%b9%b4%e7%9a%84%e7%a0%94%e7%a9%b6%e6%88%90%e6%9e%9c%e3%80%82" rel="attachment wp-att-10985909"><img class="size-medium wp-image-10985909" src="https://i.epochtimes.com/assets/uploads/2019/01/cb3d825b9272cb0c387c3e530c32f8cb-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-10985909" class="wp-caption-text">国家产学大师谢宝全展示在屏科大38年的研究成果。（屏东科技大学提供）</figcaption></figure>
+<figure id="attachment_10985909" style="width: 450px" class="wp-caption aligncenter"><ahref="https://github.com/eizauy3553/djy/blob/master/gb/19/1/19/n10985904.md#1/%e5%9c%8b%e5%ae%b6%e7%94%a2%e5%ad%b8%e5%a4%a7%e5%b8%ab%e8%ac%9d%e5%af%b6%e5%85%a8%e5%b1%95%e7%a4%ba%e5%9c%a8%e5%b1%8f%e7%a7%91%e5%a4%a738%e5%b9%b4%e7%9a%84%e7%a0%94%e7%a9%b6%e6%88%90%e6%9e%9c%e3%80%82" rel="attachment wp-att-10985909"><img class="size-medium wp-image-10985909" src="https://i.epochtimes.com/assets/uploads/2019/01/cb3d825b9272cb0c387c3e530c32f8cb-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">国家产学大师谢宝全展示在屏科大38年的研究成果。（屏东科技大学提供）</figcaption></figure>
 <p>其中以人道方式，采用分离自印尼麝香猫肠胃道之菌株发酵技术，研发的“屏科大馨之香咖啡”，及以全豆制作可保存28天的“好食花生嫩豆腐”，均造成国内外的轰动。</p>
 <p>谢宝全同时兼顾关怀产销失衡问题，为协助农民解决水果盛产问题，将年创3千亿经济奇迹的台湾珍奶，与产量过剩的红龙果、香蕉及凤梨等多种水果结合，研发出以百分百水果做成水果珍珠粉圆，提升水果利用率，为过剩的水果找出路。</p>
-<figure id="attachment_10985910" aria-describedby="caption-attachment-10985910" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://github.com/exkayf305/djy/blob/master/gb/19/1/19/n10985904.md#1/%e9%99%b3%e5%bb%ba%e4%bb%81%e5%89%af%e7%b8%bd%e7%b5%b1%e5%b7%a6%e9%a0%92%e7%99%bc%e5%9c%8b%e5%ae%b6%e7%94%a2%e5%ad%b8%e5%a4%a7%e5%b8%ab%e7%8d%8e%e5%ba%a7%e7%b5%a6%e5%b1%8f%e7%a7%91%e5%a4%a7%e8%ac%9d" rel="attachment wp-att-10985910"><img class="size-medium wp-image-10985910" src="https://i.epochtimes.com/assets/uploads/2019/01/f6e284c94eee83b0f40823e4a46fba9b-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-10985910" class="wp-caption-text">陈建仁副总统(左)颁发国家产学大师奖座给屏科大谢宝全教授(右)。（屏东科技大学提供）</figcaption></figure>
+<figure id="attachment_10985910" style="width: 450px" class="wp-caption aligncenter"><ahref="https://github.com/eizauy3553/djy/blob/master/gb/19/1/19/n10985904.md#1/%e9%99%b3%e5%bb%ba%e4%bb%81%e5%89%af%e7%b8%bd%e7%b5%b1%e5%b7%a6%e9%a0%92%e7%99%bc%e5%9c%8b%e5%ae%b6%e7%94%a2%e5%ad%b8%e5%a4%a7%e5%b8%ab%e7%8d%8e%e5%ba%a7%e7%b5%a6%e5%b1%8f%e7%a7%91%e5%a4%a7%e8%ac%9d" rel="attachment wp-att-10985910"><img class="size-medium wp-image-10985910" src="https://i.epochtimes.com/assets/uploads/2019/01/f6e284c94eee83b0f40823e4a46fba9b-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">陈建仁副总统(左)颁发国家产学大师奖座给屏科大谢宝全教授(右)。（屏东科技大学提供）</figcaption></figure>
 <p>为协助洋葱农，谢宝全利用百分百洋葱汁代替水，搭配恒春的黑豆来酿制“洋葱酱油”，洋葱渣则研发出洋葱拌面、瓦片、咖喱酱及味噌汤等多种产品。要让糖尿病患者也能安心享受美食，利用土芭乐叶片及桑叶制成胶囊“芭乐桑”。“芭乐桑”更获得科技部产学合作成果杰出奖。</p>
 <p>谢宝全说，能获得此殊荣，要感谢母校屏东科技大学前身屏东农专的栽培。屏东是农业大县，屏科大又以发展“热带农业”特色为主轴，以农产品基材、天然健康、农产品完全使用零废弃、增加附加价值及展现地方特色产品，是研发的使命与精神。</p>
 <p>责任编辑：郑桦</p>
@@ -21,47 +21,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/18/12/18/n10918162.md#1">屏科大硕士生  获全国唯一美容家政类卓越奖</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/18/12/20/n10922204.md#1">教育新南向  屏科大举办第36届海青班毕业典礼</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/18/12/28/n10938320.md#1">屏科大研发缤纷巧克力  五行养生最给力</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/15/n12881847.md#1">产学创新无限商机 屏东食品生技媒合</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/15/n12881817.md#1">执行业务很陌生 多玩几次就了解</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/15/n12881765.md#1">屏东县民公园获肯定 夺美国缪斯设计首奖</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/15/n12881615.md#1">嘉义市校园及周边人行道禁止吸食电子烟</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/15/n12881397.md#1">全中运软式网球赛 莿桐国中夺1金2银1铜　</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/15/n12881219.md#1">嘉大举办金系列艺文特展 纯金金元宝等你拿</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/15/n12880135.md#1">为全中运云林县选手加油  企业联合赞助土鸡胸肉</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/18/n10918162.md#1">屏科大硕士生  获全国唯一美容家政类卓越奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/20/n10922204.md#1">教育新南向  屏科大举办第36届海青班毕业典礼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/28/n10938320.md#1">屏科大研发缤纷巧克力  五行养生最给力</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947509.md#1">帮农民也顾健康 张丽善为学童及长者加菜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947401.md#1">潮厝华德福国小教室增建  预计一年后完工</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947029.md#1">纸风车“返笑日”线上剧场 屏县邀民众响应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947022.md#1">武汉肺炎疫情延烧 全中运开幕采数位化呈现</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947016.md#1">防疫心情全面顾 辅导网络与时俱进</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947082.md#1">嘉市“嘉e巡签--智慧巡逻箱”2.0升级版3/18全面启用</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946912.md#1">兴嘉国小学生摇身一变 成为产品包装设计师</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10835295.md#1" target="_blank">中华传统文化之叹——消逝的城墙（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9092520.md#1" target="_blank">法轮大法洪传新西兰 20年点滴回顾</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/5/n10955771.md#1" target="_blank">林辉：携美资料返国 中国石油之父最终绝望</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11397207.md#1" target="_blank">宗教与民主研究院主任：感谢法轮功坚持真理</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/8/n12867405.md#1">【未解之谜】远古科技：20亿年前核反应堆</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/11/n12872178.md#1">英国羊群排成神秘的“麦田圈” 令人费解</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/5/n12858316.md#1">原本命中无子，他做了什么事？连生11个儿子</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/3/26/n12838624.md#1">昴星人传神谕  火星童留预言</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/1/n12852461.md#1">【稷下风云】阴阳家邹衍尽言天事 声震诸侯</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/13/n12877629.md#1">【军事热点】美国警告中共 攻台将是严重错误</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/14/n12880591.md#1">【时事纵横】拜登引战狼咆哮 习为何连隐11天</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/14/n12880611.md#1">【秦鹏直播】拜登罕见派密友访台 中共气炸军演</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/13/n12877768.md#1">陈惠敏点评香港武打明星 直呼成龙是耍杂技</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/12/n12875748.md#1">【时事纵横】中共红线被踩爆 蓬佩奥年内访台？</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/13/n12875876.md#1">沈舟：罗斯福号靠近台海 辽宁号哪去了？</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/13/n12877768.md#1">陈惠敏点评香港武打明星 直呼成龙是耍杂技</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/12/n12875411.md#1">遭中共封杀 赵婷《无依之地》获英奥斯卡四奖</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/13/n12878075.md#1">69岁洪金宝近况曝光 被目击弃拐杖轮椅逛街</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/12/n12875512.md#1">章子怡出差前不舍儿子 用力亲吻现双下巴</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/13/n12878323.md#1">昆凌晒4岁儿正面照 小小周宛如缩小版周杰伦</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/12/n12873614.md#1">7大“零胆固醇食物”这样吃才降胆固醇</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/13/n12877101.md#1">【重播】中医师分享5大招 告别失眠睡不着</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/14/n12879016.md#1">NASA的“飞碟”曾坠毁 派直升机去追</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/13/n12876869.md#1">168断食怎么吃？照1张表加4妙招就不会失败</a></li>
-<li><a href="https://github.com/exkayf305/djy/blob/master/gb/21/4/13/n12876258.md#1">小狗半夜偷吃饼干 误触瓦斯炉开关酿火灾</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/exkayf305/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/exkayf305/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/19/n10985904.htm">“屏科大酱油之父”谢宝全  获国家产学大师奖</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/19/n10985904.htm">“屏科大酱油之父”谢宝全  获国家产学大师奖</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/exkayf305/djy/blob/master/gb/19/1/19/n10985904.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/exkayf305/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/exkayf305/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/exkayf305/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/exkayf305/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exkayf305/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/1/19/n10985904.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
